titles too long -> solved with ellipsis (...)

--- a/front/src/components/Global/Home.css
+++ b/front/src/components/Global/Home.css
@@ -74,7 +74,7 @@
 }
 
 .home .boxbtn {
-    width: 300px;
+    width: 310px;
 }
 
 .home .cube2 {
